[build-system]
requires = ["setuptools>=82.0.1"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "blackroad_30k_agent_monitoring"
version = "0.1.0"
description = "BlackRoad OS — blackroad_30k_agent_monitoring"
authors = [{name = "Alexa Amundson", email = "amundsonalexa@gmail.com"}]
requires-python = ">=3.11"
license = {text = "MIT"}

[project.optional-dependencies]
test = ["pytest>=7.0"]
